[package]
name = "poem_restapi_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
poem = { version = "1.3.57", features = [
    "tokio-metrics",
    "rustls",
    "opentelemetry",
    "eyre06",
] }
poem-openapi = { version = "3.0.0", features = ["swagger-ui"] }
poem-openapi-derive = "3.0.0"

reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { vesrion = "0.3.17", features = ["env-filter"] }
